Adapt to java 5 and cleanup